# gstreamer-cpp

./: .gitignore  CMakeLists.txt  back  main.cpp
